fixed app height for responsitivity on small viewports

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,14 +40,23 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   width: 100vw;
-  min-height: -webkit-fill-available;
 }
 
 body {
   min-height: 100vh;
+  min-height: fill-available;
+  min-height: -webkit-fill-available;
+}
+
+html {
+  min-height: fill-available;
+  min-height: -webkit-fill-available;
 }
 
 .mobile-screen {
+  min-height: 100vh;
+  min-height: -moz-available;
+  min-height: fill-available;
   min-height: -webkit-fill-available;
 }
 
